@@ -46,7 +46,7 @@ Two interface implementations are provided. One is for the new Firebird 3 Client
  *
  *  Contributor(s): ______________________________________.
  *    "/>
-    <Version Major="1" Minor="1" Release = "0" />
+    <Version Major="1" Minor="1"/>
     <Files Count="35">
       <Item1>
         <Filename Value="client/3.0/firebird/Firebird.pas"/>
@@ -190,10 +190,13 @@ Two interface implementations are provided. One is for the new Firebird 3 Client
         <UnitName Value="FBServices"/>
       </Item35>
     </Files>
-    <RequiredPkgs Count="1">
+    <RequiredPkgs Count="2">
       <Item1>
-        <PackageName Value="FCL"/>
+        <PackageName Value="LCL"/>
       </Item1>
+      <Item2>
+        <PackageName Value="FCL"/>
+      </Item2>
     </RequiredPkgs>
     <UsageOptions>
       <UnitPath Value="$(PkgOutDir)"/>
