@@ -4,6 +4,7 @@
 
 unit fbintf;
 
+{$warn 5023 off : no warning about unused units}
 interface
 
 uses
