@@ -1,4 +1,4 @@
-FBINTF Change Log  version                  (1.1-0) Tue, 10 Oct 2017 14:41:18 +0100
+FBINTF Change Log  version                   (1.1-0) Tue, 10 Oct 2017 14:41:18 +0100
 
 1. Fix issues with setting SQL Param values using SetAsString with Numeric types.
    Scale is no longer ignored.
@@ -46,6 +46,9 @@ FBINTF Change Log  version                  (1.1-0) Tue, 10 Oct 2017 14:41:18 +0
     an SQLDA error.
 
 14. FB30Statement/FB25Statement: Set SQLParam "modified" when string value set.
+
+15. FBAttachment: Avoid string reference count error when processing an Ansistring
+    parameter in an array of const passed to IAttachment.OpenCursor, etc.
 
 
 FBINTF Change Log  version             (1.0-2) Sat, 04 Mar 2017 14:43:56 +0000
